RESOLVED FIXED213294
media/remoteplayback-target-availability.html was a flaky failure after r262904
https://bugs.webkit.org/show_bug.cgi?id=213294
Summary media/remoteplayback-target-availability.html was a flaky failure after r262904
Geoffrey Garen
Reported 2020-06-17 07:48:24 PDT
media/remoteplayback-target-availability.html was a flaky failure after r262904
Attachments
Patch (7.44 KB, patch)
2020-06-17 08:08 PDT, Geoffrey Garen
sam: review+
Patch for landing (7.42 KB, patch)
2020-06-17 11:30 PDT, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2020-06-17 08:08:58 PDT
Geoffrey Garen
Comment 2 2020-06-17 08:09:25 PDT
Let's see what EWS thinks....
Sam Weinig
Comment 3 2020-06-17 08:59:40 PDT
Comment on attachment 402108 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402108&action=review Fantastic ChangeLog! > Source/WebCore/ChangeLog:28 > + state when we enqueue our task, and do not update it when we deqeueu our Typo: "deqeueu" should be "dequeue"
Geoffrey Garen
Comment 4 2020-06-17 11:26:25 PDT
Comment on attachment 402108 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402108&action=review >> Source/WebCore/ChangeLog:28 >> + state when we enqueue our task, and do not update it when we deqeueu our > > Typo: "deqeueu" should be "dequeue" I cannot tell you how many times I hadd tto reetype that.
Geoffrey Garen
Comment 5 2020-06-17 11:30:58 PDT
Created attachment 402135 [details] Patch for landing
EWS
Comment 6 2020-06-17 11:55:36 PDT
Committed r263175: <https://trac.webkit.org/changeset/263175> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402135 [details].
Radar WebKit Bug Importer
Comment 7 2020-06-17 11:56:21 PDT
Note You need to log in before you can comment on or make changes to this bug.