Source/WebCore/Modules/remoteplayback/RemotePlayback.h
@@ -79,12 +79,6 @@ private:
     void establishConnection();
     void disconnect();
 
-    enum class UpdateResults {
-        Unchanged,
-        Changed,
-    };
-    UpdateResults updateAvailability();
-
     // ActiveDOMObject.
     const char* activeDOMObjectName() const final;
     void stop() final;
